# wildresponder

./: .env.example  .gitignore  ALICE_INTENTS.json  ALICE_SETUP.md  README.md  docker-compose.yml  hold_on_calc.py  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  response_cache.json
backend/app/: ai_responder.py  main.py  models.py  wb_api.py
frontend/: Dockerfile  index.html  nginx.conf
frontend/static/css/: style.css
frontend/static/js/: app.js
